--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,15 +29,33 @@ h3 {
   font-size: 34px;
 }
 
-/* main{
-  display: flex;
-  justify-content: center;
-} */
-
 section{
   max-width: 1110px;
   display: flex;
   justify-content: center;
   padding-top: 100px;
   padding-bottom: 100px;
+}
+
+.main-header::before {
+  position: absolute;
+  background-image: url(/img/background.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  content: "";
+  opacity: 0.1;
+}
+
+.main-header{
+  display: flex;
+  justify-content: center;
+}
+
+.main-image{
+  top: 55px;
+  right: -270px;
+  max-height: 525px;
+  max-width: 100%;
 }
