--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,7 @@
   --white-color: #fff;
   --translucent-white-color: #d7ccc0;
   --light-coloured-color: #f5f4f0;
+  --main-color: #fe8a02;
   --basic-dark-color: #42413c;
   --dark-color: #2a2626;
   --translucent-dark-color: #908d8b;
@@ -29,33 +30,50 @@ h3 {
   font-size: 34px;
 }
 
-section{
-  max-width: 1110px;
+header {
   display: flex;
   justify-content: center;
-  padding-top: 100px;
-  padding-bottom: 100px;
 }
 
-.main-header::before {
+section {
+  max-width: 1110px;
+  display: flex;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  width: 100%;
+}
+
+header::before {
+  background-image: url('/img/background.png');
+  height: 100%;
+  width: 100%;
   position: absolute;
-  background-image: url(/img/background.png);
+  content: " ";
   background-repeat: no-repeat;
   background-size: cover;
-  width: 100%;
-  height: 100%;
-  content: "";
   opacity: 0.1;
 }
 
-.main-header{
-  display: flex;
-  justify-content: center;
+.c-orange {
+  color: var(--main-color);
 }
 
-.main-image{
+.title {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.title>h1{
+  position: relative;
+  z-index: 1;
+}
+
+.header-img {
+  position: absolute;
+  height: 525px;
   top: 55px;
   right: -270px;
-  max-height: 525px;
-  max-width: 100%;
+  z-index: 2;
 }
