--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,19 +30,6 @@ h3 {
   font-size: 34px;
 }
 
-header {
-  display: flex;
-  justify-content: center;
-}
-
-section {
-  max-width: 1110px;
-  display: flex;
-  padding-top: 100px;
-  padding-bottom: 100px;
-  width: 100%;
-}
-
 header::before {
   background-image: url('/img/background.png');
   height: 100%;
@@ -54,6 +41,20 @@ header::before {
   opacity: 0.1;
 }
 
+header {
+  display: flex;
+  justify-content: center;
+}
+
+section {
+  max-width: 1110px;
+  display: flex;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  width: 100%;
+  position: relative;
+}
+
 .c-orange {
   color: var(--main-color);
 }
@@ -62,18 +63,13 @@ header::before {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
-}
-
-.title>h1{
-  position: relative;
-  z-index: 1;
 }
 
 .header-img {
+  overflow: hidden;
   position: absolute;
   height: 525px;
   top: 55px;
   right: -270px;
-  z-index: 2;
+  z-index: -1;
 }
